--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <p>Kişiye özel beslenme programları ile sağlıklı bir yaşama adım atmanıza yardımcı oluyorum.</p>
             
             <div class="profile-image">
-                <img src="2025-03-17.jpg" alt="Diyetisyen İdil Altun">
+                <img src="2025-03-17.jpeg" alt="Diyetisyen İdil Altun">
             </div>
             
             <a href="#contact" class="action-btn">İletişime Geç</a>
