--- a/index.html
+++ b/index.html
@@ -301,10 +301,9 @@
             <h2>Sağlıklı Yaşam için Doğru Beslenme</h2>
             <p>Kişiye özel beslenme programları ile sağlıklı bir yaşama adım atmanıza yardımcı oluyorum.</p>
             
-            <div class="profile-image">
-                <img src="2025-03-17.jpeg" alt="Diyetisyen İdil Altun">
+            <div class="about-image">
+                <img src="/api/placeholder/600/400" alt="Diyetisyen İdil Altun Caba">
             </div>
-            
             <a href="#contact" class="action-btn">İletişime Geç</a>
         </div>
     </section>
