--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
             <h2>Sağlıklı Yaşam için Doğru Beslenme</h2>
             <p>Kişiye özel beslenme programları ile sağlıklı bir yaşama adım atmanıza yardımcı oluyorum.</p>
             
-            <div class="about-image">
-                <img src="2025-03-17.jpeg" alt="Diyetisyen İdil Altun Caba">
-            </div>
+            <div class="profile-image">
+    <img src="2025-03-17.jpeg" alt="Diyetisyen İdil Altun Caba">
+</div>
             <a href="#contact" class="action-btn">İletişime Geç</a>
         </div>
     </section>
