--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <h1>Diyetisyen İdil Altun</h1>
+                <h1>Diyetisyen İdil Altun/Eskişehir</h1>
             </div>
             <div class="contact-buttons">
                 <a href="tel:+905053747572" class="contact-btn">
