--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diyetisyen İdil Altun-Eskişehir</title>
+   <title>Eskişehir Diyetisyen | Kişiye Özel Beslenme Danışmanlığı - İdil Altun</title>
     <style>
         * {
             margin: 0;
