--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NWGCGXDF');</script>
 <!-- End Google Tag Manager -->
+   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Eskişehir Diyetisyen | Kişiye Özel Beslenme Danışmanlığı - İdil Altun</title>
+    <title>Eskişehir Diyetisyen | Kişiye Özel Beslenme Danışmanlığı - İdil Altun</title>
+    
+    <!-- Yeni SEO meta etiketleri -->
+    <meta name="description" content="Eskişehir'de profesyonel diyetisyen hizmetleri. Kişiye özel beslenme programları, kilo yönetimi, sporcu beslenmesi ve kronik hastalıklarda beslenme danışmanlığı.">
+    <meta name="keywords" content="diyetisyen, beslenme uzmanı, kilo verme, sporcu beslenmesi, kronik hastalık beslenmesi, Eskişehir">
+    <meta name="author" content="Diyetisyen İdil Altun">
+    
+    <!-- Open Graph Protokolü -->
+    <meta property="og:title" content="Diyetisyen İdil Altun - Eskişehir">
+    <meta property="og:description" content="Kişiye özel beslenme programları ile sağlıklı yaşama adım atın.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.diyetisyenidilaltun.com">
+    <meta property="og:image" content="path/to/2025-03-17.jpeg">
+
     <style>
+        /* mevcut stil kodları */
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
         * {
             margin: 0;
             padding: 0;
