--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-NWGCGXDF');</script>
 <!-- End Google Tag Manager -->
+    <link rel="icon" type="image/png" href="logom1.png">
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta name="author" content="Diyetisyen İdil Altun">
     
     <!-- Open Graph Protokolü -->
-    <meta property="og:title" content="Diyetisyen İdil Altun - Eskişehir">
+    <meta property="og:title" content="Eskişehir Diyetisyen | Diyetisyen İdil Altun">
     <meta property="og:description" content="Kişiye özel beslenme programları ile sağlıklı yaşama adım atın.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.diyetisyenidilaltun.com">
