--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         .logo img {
     height: 40px;
     margin-right: 10px;
-    border-radius: 50%; /* Bu satırı ekleyin */
-    object-fit: cover; /* Resmin orantılı olarak görüntülenmesi için */
+    border-radius: 50%; 
+    object-fit: cover; 
 }
         }
         
