--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Diyetisyen İdil Altun-ESKİŞEHİR</title>
+    <title>Eskişehir Diyetisyen | Kişiye Özel Beslenme Danışmanlığı - İdil Altun</title>
     <style>
         * {
             margin: 0;
@@ -276,7 +276,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <h1>Diyetisyen İdil Altun/Eskişehir</h1>
+                <h1>Eskişehir Diyetisyen | Diyetisyen İdil Altun</h1>
             </div>
             <div class="contact-buttons">
                 <a href="tel:+905053747572" class="contact-btn">
