--- a/index.html
+++ b/index.html
@@ -324,11 +324,15 @@
                 <h3>Hakkımda</h3>
             </div>
             <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-                Sağlıklı beslenme ve yaşam tarzı danışmanlığı konusunda uzmanlaşmış bir diyetisyen olarak, kişiye özel beslenme programları hazırlıyorum. Bireysel ihtiyaçlarınıza ve yaşam tarzınıza uygun çözümler sunarak, sağlıklı bir yaşam için yolculuğunuzda size rehberlik ediyorum.
+Merhaba! Ben Diyetisyen İdil Altun. Namık Kemal Üniversitesi Beslenme ve Diyetetik bölümünden mezun oldum. Bu mesleğe çoğu insandan daha farklı bakıyorum çünkü seçtiğim meslek önce benim hayatımı değiştirdi. Üniversite okuduğum süreçte 30 kilo verdim ve bir insanın hayatında neler değişir buna bizzat şahit oldum. Benimle aynı süreçlerden geçecek insanların bu süreçlerinde yanında olmak istiyorum. Bu süreçte de onların nasıl hissettiklerini anlayabilecek olduğum için kendimi şanslı sayıyorum açıkçası.
             </p>
             <br>
             <p style="text-align: center; max-width: 800px; margin: 0 auto;">
-                Beslenme bilimindeki güncel araştırmaları ve kanıta dayalı uygulamaları takip ederek, danışanlarıma en doğru bilgileri sunmayı hedefliyorum. Amacım, sadece kısa vadeli çözümler sunmak değil, aynı zamanda sizlere sağlıklı bir yaşam için gerekli beslenme alışkanlıklarını kazandırmak ve bu alışkanlıkları sürdürülebilir kılmaktır.
+Beslenmenin; yalnızca kilo almak ya da vermekten ibaret değil, sağlıklı ve kaliteli bir yaşam sürmenin temeli olduğuna inanıyorum. Aç kalmadan, yasaklarla değil; dengeli tercihlerle ve sürdürülebilir bir yaklaşımla beslenme alışkanlıklarını değiştirmeyi hedefliyorum.
+
+Ayrıca, “diyet” kavramının bozulan ve sıfırdan başlanması gereken bir şey olmadığını, hayat tarzımıza entegre edilmesi gereken sürdürülebilir bir düzen olduğunu danışanlarıma her zaman anlatıyorum. Günlük hayatta zaman zaman aksaklıklar yaşanabilir, fazla kaçan bir öğün ya da bir tatlı keyfiyle hayat durmaz. Önemli olan genel dengede sağlıklı beslenme alışkanlıklarını sürdürebilmek ve bu süreci suçluluk hissiyle değil, dengeyle yönetebilmek. Çünkü sağlıklı bir yaşamın sonucu olarak ideal kiloda olmak zaten beraberinde gelecektir.
+
+Sen de kendi sağlıklı yaşam yolculuğunu başlatmak istersen, ben buradayım.
             </p>
         </div>
     </section>
