--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ Sen de kendi sağlıklı yaşam yolculuğunu başlatmak istersen, ben buradayım
         </div>
     </section>
 
-    <!-- Services Section -->
+  <!-- Services Section -->
     <section class="section services" id="services">
         <div class="container">
             <div class="section-title">
@@ -353,17 +353,24 @@ Sen de kendi sağlıklı yaşam yolculuğunu başlatmak istersen, ben buradayım
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
+                        <i class="fas fa-wave-square"></i>
+                    </div>
+                    <h4 class="service-title">Andulasyon Terapi</h4>
+                    <p>Andumedic 3 Pro cihazı ile uygulanan andulasyon terapi; kas ve eklem ağrılarını azaltır, kan dolaşımını iyileştirir, metabolizmayı hızlandırarak incelmeye yardımcı olur, stresi azaltır ve uyku kalitesini düzenler.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-bed"></i>
+                    </div>
+                    <h4 class="service-title">Sporcu Beslenmesi</h4>
+                    <p>Fitness Nutrition Specailst (FNS) sertifikalı bir diyetisyen olarak performansınızı artırmak ve hedeflerinize ulaşmak için spor dalınıza özel beslenme programları hazırlıyorum.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
                         <i class="fas fa-heartbeat"></i>
                     </div>
                     <h4 class="service-title">Kronik Hastalıklarda Beslenme</h4>
                     <p>Diyabet, hipertansiyon, kalp hastalıkları gibi kronik hastalıklarda beslenme tedavisi uyguluyorum.</p>
-                </div>
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-running"></i>
-                    </div>
-                    <h4 class="service-title">Sporcu Beslenmesi</h4>
-                    <p>Performansınızı artırmak ve hedeflerinize ulaşmak için spor dalınıza özel beslenme programları hazırlıyorum.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
