--- a/index.html
+++ b/index.html
@@ -353,14 +353,14 @@ Sen de kendi sağlıklı yaşam yolculuğunu başlatmak istersen, ben buradayım
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-wave-square"></i>
+                        <i class="fas fa-procedures"></i>
                     </div>
                     <h4 class="service-title">Andulasyon Terapi</h4>
                     <p>Andumedic 3 Pro cihazı ile uygulanan andulasyon terapi; kas ve eklem ağrılarını azaltır, kan dolaşımını iyileştirir, metabolizmayı hızlandırarak incelmeye yardımcı olur, stresi azaltır ve uyku kalitesini düzenler.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-bed"></i>
+                        <i class="fas fa-running"></i>
                     </div>
                     <h4 class="service-title">Sporcu Beslenmesi</h4>
                     <p>Fitness Nutrition Specailst (FNS) sertifikalı bir diyetisyen olarak performansınızı artırmak ve hedeflerinize ulaşmak için spor dalınıza özel beslenme programları hazırlıyorum.</p>
