--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                 <div class="hero-text">
                     <h2>Sağlıklı Yaşam için Doğru Beslenme</h2>
                     <p>Kişiye özel beslenme programları ile sağlıklı bir yaşama adım atmanıza yardımcı oluyorum.</p>
-                    <a href="#contact" class="action-btn">İletişime Geç</a>
+                    <a href="#contact" class="action-btn">İletişime Geç</a> <a href="#about" class="action-btn" style="margin-left: 15px;">Hakkımda</a>
                 </div>
                 <div class="hero-image">
                     <div class="profile-image">
